Added skill setup template structure

--- a/atlas/templates/skills/skill_setup.html
+++ b/atlas/templates/skills/skill_setup.html
@@ -2,6 +2,16 @@
 
 {% block content %}
 
+<p>Please add the first skill you would like to learn</p>
+{# SKILL NAME GOES HERE #}
 
+<p>Now split this into smaller tasks</p>
+
+{# TASK NAME GOES HERE #}
+{# COMPLETION TIME GOES HERE #}
+
+<p>Finally, specify how much time you can devote to this skill each day</p>
+
+{# LIST THE DAYS HERE SO HOURS AND MINUTES CAN BE ENTERED #}
 
 {% endblock %}
