Added skill progress template structure

--- a/atlas/templates/skills/skill_progress.html
+++ b/atlas/templates/skills/skill_progress.html
@@ -2,6 +2,20 @@
 
 {% block content %}
 
+FOR SKILL IN SKILLS
 
+<h2>skill.name<h2>
+
+<p>Task completion rate:</p>
+
+<p>Total time spent learning this skill:</p>
+
+<p>Most completed task:</p>
+
+<p>Least completed task:</p>
+
+<a href="">Edit skill.name tasks</a>
+
+ENDFOR
 
 {% endblock %}
