Added Progress class

--- a/atlas/templates/skills/skill_progress.html
+++ b/atlas/templates/skills/skill_progress.html
@@ -4,7 +4,7 @@
 
 {% for skill in skills %}
 
-    <h2>{{ skill.name }}</h2>
+    <h2>{{ skill.skill.name }}</h2>
 
     <p>Task completion rate:</p>
 
