--- a/atlas/templates/skills/skill_list.html
+++ b/atlas/templates/skills/skill_list.html
@@ -2,6 +2,10 @@
 
 {% block content %}
 
+{% for task in list %}
 
+    <p>{{ task.name }} - {{ task.completion_time }}</p>
+
+{% endfor %}
 
 {% endblock %}
