--- a/atlas/templates/skills/skill_list.html
+++ b/atlas/templates/skills/skill_list.html
@@ -4,7 +4,9 @@
 
 {% for task in list %}
 
-    <p>{{ task.name }} - {{ task.completion_time }}</p>
+    <div class="listTask">
+        <p>{{ task.name }} - {{ task.completion_time }}</p>
+    </div>
 
 {% endfor %}
 
