--- a/atlas/templates/skills/skill_list.html
+++ b/atlas/templates/skills/skill_list.html
@@ -4,8 +4,8 @@
 
 {% for task in list %}
 
-    <div class="listTask">
-        <p>{{ task.name }} - {{ task.completion_time }}</p>
+    <div class="list_task">
+        <p><span class="task_name">{{ task.name }}</span> - {{ task.completion_time }}</p>
     </div>
 
 {% endfor %}
