Changed day edit js so only one day can be edited at a time

--- a/atlas/templates/skills/skill_overview.html
+++ b/atlas/templates/skills/skill_overview.html
@@ -31,7 +31,7 @@
     </div>
 {% endfor %}
 
-<p>Add a new skill</p>
+<h3>Add a new skill</h3>
 
 <form method='POST' action='' class='overview_skill'>
     {% csrf_token %}
@@ -65,8 +65,8 @@
     <input type="submit" value="Add Skill">
 </form>
 
-<p>Availability</p>
-<table class="days_times" tooltip="Edit">
+<h3>Availability</h3>
+<table class="days_times" tooltip="Click to edit">
     <thead>
         <tr class="days">
             <th>Monday</th>
