--- a/atlas/templates/base.html
+++ b/atlas/templates/base.html
@@ -52,6 +52,9 @@
           <ul class="nav navbar-nav">
             <li><a href="{% url 'home' %}">Home</a></li>
             <li><a href="{% url 'about' %}">About</a></li>
+            <li><a href="{% url 'skills:overview' %}">Overview</a></li>
+            <li><a href="{% url 'skills:progress' %}">Progress</a></li>
+            <li><a href="{% url 'skills:list' %}">List</a></li>
           </ul>
 
           <ul class="nav navbar-nav navbar-right">
