--- a/atlas/templates/account/login.html
+++ b/atlas/templates/account/login.html
@@ -40,6 +40,7 @@
         {% endif %}
         <button class="btn btn-primary" type="submit">{% trans "Sign In" %}</button>
         <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+        <p>{% blocktrans %}Don't have an account? Then please <a href="{{ signup_url }}">sign up</a>.{% endblocktrans %}</p>
       </form>
     </div>
   </div>
