--- a/atlas/templates/pages/home.html
+++ b/atlas/templates/pages/home.html
@@ -2,6 +2,25 @@
 
 {% block content %}
 
-	<h1>Atlas - Supporting your skills</h1>
+	<h1>Atlas - Navigate your spare time</h1>
+
+    <h2>What</h2>
+    <p>Atlas is a mobile focused web application designed to help users manage their spare time, specifically aimed at learning skills. With limited time in each day, especially after work, it can feel frustratingly wasteful to spend that time organising how to spend that time. </p>
+
+    <p>After minimal set up, Atlas takes out the effort and simply provides you with a todo list of tasks that fit into any time frame, every day.</p>
+
+
+    <h2>How</h2>
+    <p>The backend is a Django REST API, and the frontend is generated with Django's templating system. While it may seem redundant to build the application in this way, it was a conscious decision. The reason being that this is a proof of concept, built in a way that is simultaneously forward thinking and the quickest way to technologically solve the problem outlined in the What section. As I use/test the application, I will discover what works and what doesn't, and use this information to refine the app and build out a more feature rich front end (using a fit for purpose front end framework) and a native mobile app. Using an API allows for this extensibility, and using Django's own templating system ensured the quickest and simplest solution (specific to my knowledge of web development).</p>
+
+    <a href="https://github.com/Kayra/atlas"><p>The code for this application can be viewed on github: https://github.com/Kayra/atlas</p></a>
+
+    <h2>Why</h2>
+    <p>App stores in every ecosystem are saturated with ToDo apps. Despite this, I was unable to find one that scratched the itch I had. During my time working at a digital agency, my work was streamlined by my project manager, which freed me from the need to organise my time allowing me to focus on my work. I had a strong desire for such a workflow in my spare time, as I had many hobbies; keeping track of what I should be doing in each one to further my competence became tedious. And so, Atlas was born. </p>
+
+    <h2>Todo:</h2>
+    <ul>
+        <li></li>
+    </ul>
 
 {% endblock %}
