Added todo list to homepage

--- a/atlas/templates/pages/home.html
+++ b/atlas/templates/pages/home.html
@@ -20,7 +20,14 @@
 
     <h2>Todo:</h2>
     <ul>
-        <li></li>
+        <li>Add design elements to site</li>
+        <li>Change the routing so a signed in user is redirected to list from home page</li>
+        <li>Add ability to remove tasks and skills</li>
+        <li>Format the time on the list page so that the hour part of the time is not displayed unless in use</li>
+        <li>Change the way in which availability time is changed on overview page</li>
+        <li>Replace the time field in the HTML (poorly supported)</li>
+        <li>Add option to include breaks between tasks (with the ability to specify how often and how long breaks are - with defaults)</li>
+        <li>Provide graphical representations of progress</li>
     </ul>
 
 {% endblock %}
