Edited homepage copy

--- a/atlas/templates/pages/home.html
+++ b/atlas/templates/pages/home.html
@@ -5,13 +5,13 @@
 	<h1>Atlas - Navigate your spare time</h1>
 
     <h2>What</h2>
-    <p>Atlas is a mobile focused web application designed to help users manage their spare time, specifically aimed at learning skills. With limited time in each day, especially after work, it can feel frustratingly wasteful to spend that time organising how to spend that time. </p>
+    <p>Atlas is a mobile focused web application designed to help users manage their spare time, specifically when trying to learning skills. With limited time in each day, especially after work, it can feel frustratingly wasteful to spend that time organising how to spend that time. </p>
 
     <p>After minimal set up, Atlas takes out the effort and simply provides you with a todo list of tasks that fit into any time frame, every day.</p>
 
 
     <h2>How</h2>
-    <p>The backend is a Django REST API, and the frontend is generated with Django's templating system. While it may seem redundant to build the application in this way, it was a conscious decision. The reason being that this is a proof of concept, built in a way that is simultaneously forward thinking and the quickest way to technologically solve the problem outlined in the What section. As I use/test the application, I will discover what works and what doesn't, and use this information to refine the app and build out a more feature rich front end (using a fit for purpose front end framework) and a native mobile app. Using an API allows for this extensibility, and using Django's own templating system ensured the quickest and simplest solution (specific to my knowledge of web development).</p>
+    <p>The backend is a Django REST API, and the frontend is generated with Django's templating system. While it may seem redundant to build the application in this way, it was a conscious decision. The reason being that this is a proof of concept, built in a way that is simultaneously forward thinking and the quickest way to technologically solve the problem outlined in the What section. As I use/test the application, I will discover what works and what doesn't, and use this information to refine the app and build out a more feature rich front end (using a fit for purpose front end framework) and a native mobile app. Using an API allows for this extensibility, and using Django's own templating system ensured the quickest and simplest solution.</p>
 
     <a href="https://github.com/Kayra/atlas"><p>The code for this application can be viewed on github: https://github.com/Kayra/atlas</p></a>
 
