Added container for main content - styling

--- a/atlas/templates/pages/home.html
+++ b/atlas/templates/pages/home.html
@@ -5,7 +5,7 @@
 	<h1>Atlas - Navigate your spare time</h1>
 
     <h2>What</h2>
-    <p>Atlas is a mobile focused web application designed to help users manage their spare time, specifically when trying to learning skills. With limited time in each day, especially after work, it can feel frustratingly wasteful to spend that time organising how to spend that time. </p>
+    <p>Atlas is a mobile focused web application designed to help users manage their spare time, specifically when trying to learn skills. With limited time in each day, especially after work, it can feel frustratingly wasteful to spend that time organising how to spend that time. </p>
 
     <p>After minimal set up, Atlas takes out the effort and simply provides you with a todo list of tasks that fit into any time frame, every day.</p>
 
