--- a/atlas/templates/base.html
+++ b/atlas/templates/base.html
@@ -77,9 +77,12 @@
           {% endfor %}
       {% endif %}
 
-      {% block content %}
-      {% endblock content %}
-
+      <div class="row">
+        <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
+          {% block content %}
+          {% endblock content %}
+        </div>
+      </div>
     </div> <!-- /container -->
 
     {% block modal %}{% endblock modal %}
